# hitster-scanner

./: .editorconfig  CMakeLists.txt  QmlModule.cmake  readme.md
.github/workflows/: android.yml
cmake/: AndroidOpenSSL.cmake
qml/: AuthPage.qml  DeviceButton.qml  HomePage.qml  HowToPlayPage.qml  HtmlInfoPage.qml  Icon.qml  LoginPage.qml  Logo.qml  Main.qml  MenuButton.qml  ScanPage.qml  TrackDrawer.qml
res/app/: Info.plist
res/app/android/: AndroidManifest.xml
res/app/android/res/drawable/: ic_launcher_foreground.xml
res/font/: license
src/: CMakeLists.txt  main.cpp  urlresolver.cpp  urlresolver.hpp
src/entity/: CMakeLists.txt  album.cpp  album.hpp  artist.cpp  artist.hpp  currentlyplaying.cpp  currentlyplaying.hpp  device.cpp  device.hpp  image.cpp  image.hpp  playbackstate.cpp  playbackstate.hpp  track.cpp  track.hpp
src/model/: CMakeLists.txt  devicelistmodel.cpp  devicelistmodel.hpp
src/qml/: CMakeLists.txt  howtoplay.cpp  howtoplay.hpp  htmlinfo.cpp  htmlinfo.hpp  permissionmanager.cpp  permissionmanager.hpp  qrcodescanner.cpp  qrcodescanner.hpp  spotifyapi.cpp  spotifyapi.hpp  wordscrambler.cpp  wordscrambler.hpp
ts/: hitster_sv.ts
